fixed header issue with scores not aligning properly and cleaned up header css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,7 +7,7 @@
 .page {
   font-family: 'Rubik', sans-serif;
   padding: 10px;
-  background-color: #282828;
+  background-color: #000000;
   width: 100%;
   height: 100%;
 }
@@ -53,32 +53,11 @@
 }
 
 .currentGameHeader {
-  padding: 30px;
+  padding: 20px;
   height: 40%;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.headerRow {
   display: flex;
   flex-direction: row;
-  align-items: flex-end;
-  width: 100%;
-}
-
-.headerRowScore {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-  }
-
-.headerScoreDash {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .headerColumn {
@@ -86,37 +65,27 @@
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  width: 50%;
+  width: 45%;
 }
 
 .headerTeam {
-  font-weight: bolder;
-  font-size: 140%;
-}
-
-.teamRecord {
-  padding-top: 10px;
-  padding-bottom: 40px;
-}
-
-.headerPeriod {
-  font-weight: 800;
-  font-size: 125%;
-  margin: 0 0 10px 0;
+  font-size: 150%;
 }
 
 .period {
-  padding-bottom: 1%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.headerPeriod {
+  font-size: 125%;
+  text-align: center;
 }
 
 .headerTime {
   font-weight: 800;
   font-size: 125%;
-}
-
-#headerLogo {
-  width: 40%;
-  height: auto;
 }
 
 .headerScore {
